RESOLVED FIXED193378
Release assert with <img usemap> in shadow tree
https://bugs.webkit.org/show_bug.cgi?id=193378
Summary Release assert with <img usemap> in shadow tree
Antti Koivisto
Reported 2019-01-11 23:39:19 PST
Tree scope confusion.
Attachments
patch (4.10 KB, patch)
2019-01-11 23:45 PST, Antti Koivisto
ews-watchlist: commit-queue-
Archive of layout-test-results from ews101 for mac-highsierra (2.47 MB, application/zip)
2019-01-12 00:47 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews106 for mac-highsierra-wk2 (2.61 MB, application/zip)
2019-01-12 00:59 PST, EWS Watchlist
no flags
patch (4.49 KB, patch)
2019-01-12 01:02 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-01-11 23:45:27 PST
EWS Watchlist
Comment 2 2019-01-12 00:47:55 PST
Comment on attachment 358985 [details] patch Attachment 358985 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/10723377 New failing tests: fast/shadow-dom/image-map-tree-scope.html
EWS Watchlist
Comment 3 2019-01-12 00:47:57 PST
Created attachment 358988 [details] Archive of layout-test-results from ews101 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 4 2019-01-12 00:59:57 PST
Comment on attachment 358985 [details] patch Attachment 358985 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/10723392 New failing tests: fast/shadow-dom/image-map-tree-scope.html
EWS Watchlist
Comment 5 2019-01-12 00:59:59 PST
Created attachment 358989 [details] Archive of layout-test-results from ews106 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
Antti Koivisto
Comment 6 2019-01-12 01:02:33 PST
WebKit Commit Bot
Comment 7 2019-01-13 05:15:17 PST
Comment on attachment 358990 [details] patch Clearing flags on attachment: 358990 Committed r239905: <https://trac.webkit.org/changeset/239905>
WebKit Commit Bot
Comment 8 2019-01-13 05:15:19 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2019-01-13 05:16:30 PST
Note You need to log in before you can comment on or make changes to this bug.